k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  labels: {app: frontend}
spec:
  replicas: 2
  selector: {matchLabels: {app: frontend}}
  template:
    metadata:
      labels: {app: frontend}
    spec:
      imagePullSecrets: [{name: dockerhub}]
      containers:
        - name: frontend
          image: wanyongdoker/k8s-demo-frontend:1.0.0
          ports: [{name: http, containerPort: 80}]
          readinessProbe:
            httpGet: {path: /healthz, port: 80}
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: /healthz, port: 80}
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: {cpu: "50m", memory: "64Mi"}
            limits:   {cpu: "300m", memory: "256Mi"}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
  labels: {app: frontend}
spec:
  selector: {app: frontend}
  ports: [{name: http, port: 80, targetPort: 80}]
