k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-demo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: {name: backend, port: {number: 8080}}
          - path: /
            pathType: Prefix
            backend:
              service: {name: frontend, port: {number: 80}}
